Changelog
=========

3.0a2 - unreleased
------------------

* Update example configuration to Solr 3.3.
  [hannosch]

* Add `getRID` and `_unrestrictedGetObject` to our flare implementation.
  [hannosch]

* Added documentation on setting up a master-slave configuration using the
  `SolrReplication` support.
  [hannosch]

* Adjust tests to work with latest `collective.recipe.solrinstance = 3.3` and
  its new ICU-based text field.
  [hannosch]

3.0a1 - 2011-06-23
------------------

Upgrade notes
*************

* Changed the names of the indexes used to emulate the `path` index. You need
  to adjust your schema and rename `physicalPath` to `path_string`, 
  `physicalDepth` to `path_depth` and `parentPaths` to `path_parents`. This
  also requires a full Solr reindex to pick up the new data.
  [hannosch]

Changes
*******

* Added `object_provides` index to example schema, as it's used in the
  collection portlet to find collections.
  [hannosch]

* Rewrote the `maintenance/sync` method for more performance, dropped the
  optional `path` restriction from it and removed the `cache` argument. It
  should be able to sync datasets in the 100,000 object range in the matter of
  a couple minutes.
  [hannosch]

* Changed the `maintenance/reindex` method to only flush data to Solr but not
  commit after each batch. Instead we only commit once at the end. You should
  configure auto commit policies on the Solr server side or `commitWithin`.
  [hannosch]

* Adjusted the `mangleQuery` function to calculate extended path indexes from
  the Solr schema instead of hardcoding `path`. If you have any additional
  extended path indexes, you need to provide indexers with the same three
  suffixes as we do ourselves in the `attributes` module for the `path` index
  and add those to the Solr schema.
  [hannosch]

* Added documentation on Java process, monitoring production settings and
  include a number of useful munin plugin configurations.
  [hannosch]
