@@ -4,6 +4,9 @@ Changelog
 3.0a2 - unreleased
 ------------------
 
+* Added tests for splitting words on `:` and `-`.
+  [hannosch]
+
 * Update example configuration to Solr 3.3.
   [hannosch]
 
